--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -5,34 +5,145 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SCVRP</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">    
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">SCVRP</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Display</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Bibliography</a>
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">SCVRP</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Display</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Bibliography</a>
+        </li>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container p-5">
+    <div class="row ">
+      </div> 
+    <div class="row align-items-start ">
+      <div class="col">
+        <h1 class="text-center">Symetric capacitated vehicle routing problem solver</h1>
+        <p class="text-break pt-5 fs-4">
+          Capacitated vehicle routing problem (CVRP) is variation of VRP with additional limitation based on delivery car capacity. Symetric capacitated vehicle routing problem (SCVRP) adds the assumption that the cost of travel by road from A to B is the same as from B to A. This website alows you to upload your SCVRP problem and solves it using saving based heuristics. You can add point manualy or upload them in CSV* file. 
+
+          Please note that adding problem with many point may take long time to solve.
+        </p>
+
+        <p class="text-break p-1 fs-5">
+          *CSV file must be filled in the same format as template
+        </p>
+        <div class="d-grid gap-2 col-4 mx-auto">
+          <button type="button" class="btn btn-secondary" id="getCSVButton">
+            Get CSV template
+          </button>
+        </div>
+      </div>
+      <div class="col">
+        <h1 class="text-center">To calculate SCVRP</h1>
+        <div class="pt-5 d-grid gap-2 col-4 mx-auto">
+          <button type="button" class="btn btn-secondary" id="uploadCSVButton">
+            Upload CSV
+          </button>
+        </div>
+          <p class="text-center pt-3 fs-4">or</p>
+          <p class="text-center fs-4">
+            Input data manualy            
+          </p>
+          <div class="d-grid gap-2 col-4 mx-auto">
+            <p class="text-center pt-3 fs-4">Car information</p>
+            <ul class="list-group list-group-horizontal pb-3">
+              <li class="list-group-item">
+                Car capacity
+              </li>
+              <li class="list-group-item">
+                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Number of vehicles">
+              </li>
+            </ul>
+            </div>
+          <div class="d-grid gap-2 col-10 mx-auto">
+            
+            <ul class="list-group list-group-horizontal">
+              <li class="list-group-item">
+                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Number of vehicles">
+              </li>
+              <li class="list-group-item">
+                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Number of vehicles">
+              </li>
+              <li class="list-group-item">
+                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Number of vehicles">
+              </li>
+            </ul>
+            <ul class="list-group list-group-horizontal">
+              <li class="list-group-item">
+                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Number of vehicles">
+              </li>
+              <li class="list-group-item">
+                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Number of vehicles">
+              </li>
+              <li class="list-group-item">
+                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Number of vehicles">
+              </li>
+            </ul>
+            <ul class="list-group list-group-horizontal">
+              <li class="list-group-item">
+                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Number of vehicles">
+              </li>
+              <li class="list-group-item">
+                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Number of vehicles">
+              </li>
+              <li class="list-group-item">
+                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Number of vehicles">
+              </li>
+            </ul>
+            <ul class="list-group list-group-horizontal">
+              <li class="list-group-item">
+                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Number of vehicles">
+              </li>
+              <li class="list-group-item">
+                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Number of vehicles">
+              </li>
+              <li class="list-group-item">
+                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Number of vehicles">
+              </li>
+            </ul>
+            <ul class="list-group list-group-horizontal">
+              <li class="list-group-item">
+                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Number of vehicles">
+              </li>
+              <li class="list-group-item">
+                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Number of vehicles">
+              </li>
+              <li class="list-group-item">
+                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Number of vehicles">
+              </li>
+            </ul>
+            <ul class="list-group list-group-horizontal">
+              <li class="list-group-item">
+                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Number of vehicles">
+              </li>
+              <li class="list-group-item">
+                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Number of vehicles">
+              </li>
+              <li class="list-group-item">
+                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Number of vehicles">
               </li>
           </ul>
         </div>
-      </nav>
-      <div class = "container">
-        <div class = "w-50">
-          <h1 class="text-center">Symetric capacitated vehicle routing problem solver</h1>
-        </div>
-        <div class = "w-50">Width is 50%</div>
-     </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
