--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -18,13 +18,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./display.html">Display</a>
+          <a class="nav-link" href="/display/">Display</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./bibliography.html">Bibliography</a>
+          <a class="nav-link" href="/bibliography/">Bibliography</a>
         </li>
       </div>
     </div>
