--- a/website/templates/result.html
+++ b/website/templates/result.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CVRP</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">    
-
+    <script>
+      function getResultsButtonClicked() {
+        console.log("getResultsButtonClicked");
+      }
+    </script>
 </head>
 <body>
 
@@ -20,27 +24,26 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link " href="./index.html">Home</a>
+          <a class="nav-link " href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/display">Display</a>
+          <a class="nav-link" href="/display/">Display</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./bibliography.html">Bibliography</a>
+          <a class="nav-link" href="/bibliography/">Bibliography</a>
         </li>
       </div>
     </div>
   </nav>
     <!-- END NAVBAR -->
-    
+
   <div class="container p-5">
 
   <div class="pt-5 d-grid gap-2 col-8 mx-auto">
-    <button type="button" class="btn btn-lg btn-secondary" id="getResultsButton">
+    <button type="button" class="btn btn-lg btn-secondary" id="getResultsButton" onclick="getResultsButtonClicked()">
         Download results as CSV
     </button>
-
-    <img src="../data/images/placeholder.png" class="rounded float-start">
+    <img src="{{ content.image_url }}" class="rounded float-start">
     </div>
 </div>
 
