--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SCVRP</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">    
-</head>
+    <script>
+      function addPointAdded() {
+        console.log("addPoint clicked");
+      }
+      </script>
+  </head>
 <body>
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -148,7 +153,7 @@
             </ul> -->
 
             <div class="pt-1 d-grid gap-2 col-4 mx-auto">
-            <button type="button" class="btn btn-secondary ml-8 mr-8 mt-1" id="addPointButton">
+            <button type="button" class="btn btn-secondary ml-8 mr-8 mt-1" id="addPointButton" onclick="addPointAdded()">
               Add Point
             </button>
           </div>
