--- a/website/templates/result.html
+++ b/website/templates/result.html
@@ -43,6 +43,7 @@
     <button type="button" class="btn btn-lg btn-secondary" id="getResultsButton" onclick="getResultsButtonClicked()">
         Download results as CSV
     </button>
+    <p>Full cost: {{ content.full_cost }}</p>
     <img src="{{ content.image_url }}" class="rounded float-start">
     </div>
 </div>
