--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -6,11 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SCVRP</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">    
-    <script>
-      function addPointAdded() {
-        console.log("addPoint clicked");
-      }
-      </script>
+   
   </head>
 <body>
   <!-- NAVBAR -->
@@ -59,9 +55,11 @@
       <div class="col">
         <h1 class="text-center">To calculate SCVRP</h1>
         <div class="pt-5 d-grid gap-2 col-4 mx-auto">
-          <button type="button" class="btn btn-secondary" id="uploadCSVButton">
+          <p class="text-center pt-3 fs-4">Upload CSV</p>
+          <input type="file" class="form-control-file" id="csvFileInput" accept=".csv">
+          <!-- <button type="button" class="btn btn-secondary" id="uploadCSVButton">
             Upload CSV
-          </button>
+          </button> -->
         </div>
           <p class="text-center pt-3 fs-4">or</p>
           <p class="text-center fs-4">
@@ -74,84 +72,13 @@
                 Car capacity
               </li>
               <li class="list-group-item">
-                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Number of vehicles">
+                <input type="number" class="form-control" id="capacityOfVehicles" placeholder="Number of vehicles">
               </li>
             </ul>
             </div>
           <div class="d-grid gap-2 col-10 mx-auto">
-            
-            <ul class="list-group list-group-horizontal">
-              <li class="list-group-item">
-                <input type="number" class="form-control" id="numberOfVehicles" placeholder="X">
-              </li>
-              <li class="list-group-item">
-                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Y">
-              </li>
-              <li class="list-group-item">
-                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Q">
-              </li>
-            </ul>
-
-            <ul class="list-group list-group-horizontal">
-              <li class="list-group-item">
-                <input type="number" class="form-control" id="numberOfVehicles" placeholder="X">
-              </li>
-              <li class="list-group-item">
-                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Y">
-              </li>
-              <li class="list-group-item">
-                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Q">
-              </li>
-            </ul>
-
-            <!-- <ul class="list-group list-group-horizontal">
-              <li class="list-group-item">
-                <input type="number" class="form-control" id="numberOfVehicles" placeholder="X">
-              </li>
-              <li class="list-group-item">
-                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Y">
-              </li>
-              <li class="list-group-item">
-                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Q">
-              </li>
-            </ul>
-
-            <ul class="list-group list-group-horizontal">
-              <li class="list-group-item">
-                <input type="number" class="form-control" id="numberOfVehicles" placeholder="X">
-              </li>
-              <li class="list-group-item">
-                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Y">
-              </li>
-              <li class="list-group-item">
-                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Q">
-              </li>
-            </ul>
-
-            <ul class="list-group list-group-horizontal">
-              <li class="list-group-item">
-                <input type="number" class="form-control" id="numberOfVehicles" placeholder="X">
-              </li>
-              <li class="list-group-item">
-                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Y">
-              </li>
-              <li class="list-group-item">
-                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Q">
-              </li>
-            </ul>
-
-            <ul class="list-group list-group-horizontal">
-              <li class="list-group-item">
-                <input type="number" class="form-control" id="numberOfVehicles" placeholder="X">
-              </li>
-              <li class="list-group-item">
-                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Y">
-              </li>
-              <li class="list-group-item">
-                <input type="number" class="form-control" id="numberOfVehicles" placeholder="Q">
-              </li>
-            </ul> -->
-
+            <div id="listDiv">
+            </div>
             <div class="pt-1 d-grid gap-2 col-4 mx-auto">
             <button type="button" class="btn btn-secondary ml-8 mr-8 mt-1" id="addPointButton" onclick="addPointAdded()">
               Add Point
@@ -171,5 +98,188 @@
       </div>
     </div>
   </div>
+  <script>
+
+    var isCSVUploaded = false;
+    var manualPointsNum = 0;
+    var useCSV = true;
+
+    var csvObject = Object();
+    var manualPointsObject = Object();
+
+    function addPointAdded() {
+      console.log("addPoint clicked");
+      
+      document.getElementById("listDiv").innerHTML += 
+            '<ul class="list-group list-group-horizontal"><li class="list-group-item" tag="input"><input type="number" class="form-control" id="X'  + String(manualPointsNum) + '"placeholder="X"></li><li class="list-group-item"><input type="number" class="form-control" id="Y'  + String(manualPointsNum) + '" placeholder="Y"></li><li class="list-group-item"><input type="number" class="form-control" id="Q'  + String(manualPointsNum) + '" placeholder="Q"></li></ul>';
+    
+            manualPointsNum++;
+          }
+
+    const csvFileSelector = document.getElementById('csvFileInput');
+    const useCSVtoggle = document.getElementById('useCSVSwitch');
+    const calcButton = document.getElementById('solveButton');
+    const getCSVTempalte = document.getElementById('getCSVButton');
+    // console.log(csvFileSelector);
+
+    getCSVTempalte.addEventListener('click', function() {
+      console.log("getCSV clicked");
+      var xhr = new XMLHttpRequest();
+      xhr.open('GET', 'template.csv', true);
+      xhr.responseType = 'blob';
+      xhr.onload = function(e) {
+        if (this.status == 200) {
+          var blob = this.response;
+          var link = document.createElement('a');
+          link.href = window.URL.createObjectURL(blob);
+          link.download = 'template.csv';
+          link.click();
+        }
+      };
+      xhr.send();
+    });
+
+    csvFileSelector.addEventListener('change', (event) => {
+      readImage(event.target);
+      const file = event.target.files[0];
+    });
+
+    useCSVtoggle.addEventListener('change', (event) => {
+      useCSV = event.target.checked;
+      console.log(useCSV);
+    });
+
+    calcButton.addEventListener('click', (event) => {
+      console.log("calcButton clicked");
+      if (useCSV) {
+        console.log("useCSV");
+        if (isCSVUploaded) {
+          console.log("isCSVUploaded");
+          solve();
+        } else {
+          alert("CSV file is not uploaded");
+        }
+      } else {
+        if(checkPoints()) {
+          pointsToObject();
+        }
+      }
+    });
+
+    var obj_csv = {
+      size:0,
+      dataFile:[]
+    };
+
+    function readImage(input) {
+      console.log(input)
+
+      let reader = new FileReader();
+      reader.readAsBinaryString(input.files[0]);
+      reader.onload = function (e) {
+        console.log(e);
+        obj_csv.size = e.total;
+        obj_csv.dataFile = e.target.result
+        console.log(obj_csv.dataFile)
+        parseData(obj_csv.dataFile)  
+        }
+    }
+    
+    function parseData(data){
+        let csvData = [];
+        if (checkCSVFile(data)) {
+          console.log("Correct CSV file");
+          csvToObject(data);
+        }
+    }
+
+    function checkCSVFile(data) {
+      data = data.split("\n");
+      // data = data.split(";");
+      console.log(data);
+      let firstRow = data[0].split(";");
+      if (firstRow[0] != "CarCap") {
+        alert("Wrong CSV file format. Check CarCap");
+        return false;
+      }
+      if (Number(firstRow[1]) < 1) {
+        alert("Wrong CSV file format. Check capacity of vehicles");
+        return false;
+      }
+      for(let i = 1; i < data.length-1; i++) {
+        let row = data[i].split(";");
+        console.log(row);
+        if (row.length != 6) {
+          alert("Wrong CSV file format. Check number of columns");
+          return false;
+        }
+        // row[6] =row[6].replace('\r','');
+        // console.log(row[5]);
+        if (Number(row[5])<1 || Number(row[5])>Number(firstRow[1])) {
+          alert("Wrong CSV file format. Check vehicle capacity");
+          return false;
+        }
+      }
+      return true;
+    }
+
+    function csvToObject(data) {
+      points_arr =[]
+      data = data.split("\n");
+      let firstRow = data[0].split(";");
+      let capacity = Number(firstRow[1]);
+      for(let i = 1; i < data.length-1; i++) {
+        let row = data[i].split(";");
+        var point = Object();
+        point.x = Number(row[1]);
+        point.y = Number(row[3]);
+        point.q = Number(row[5]);
+        points_arr.push(point);
+      }
+      csvObject.cap = capacity;
+      csvObject.points = points_arr;
+      isCSVUploaded = true;
+      console.log("csvObject", csvObject);
+    }
+
+    function checkPoints() {
+      if (manualPointsNum<1) {
+        alert("No points added");
+        return false;
+      }
+      let carCap = document.getElementById("capacityOfVehicles").value;
+      if (carCap<1) {
+        alert("Wrong capacity of vehicles");
+        return false;
+      }
+      for(let i = 0; i < manualPointsNum; i++) {
+        let x = document.getElementById("X" + String(i)).value;
+        let y = document.getElementById("Y" + String(i)).value;
+        let q = document.getElementById("Q" + String(i)).value;
+        if (Number(q)<1 || Number(q)>Number(carCap)) {
+          alert('Wrong point with index: '+ String(i) + ' capacity');
+          return false;
+        }
+      }
+      return true;
+    }
+    
+    function pointsToObject() {
+      let carCap = document.getElementById("capacityOfVehicles").value;
+      let points_arr = [];
+      for(let i = 0; i < manualPointsNum; i++) {
+        let point = Object();
+        point.x = document.getElementById("X" + String(i)).value;
+        point.y = document.getElementById("Y" + String(i)).value;
+        point.q = document.getElementById("Q" + String(i)).value;
+        points_arr.push(point);
+      }
+      manualPointsObject.cap = carCap;
+      manualPointsObject.points = points_arr;
+      console.log("manualPointsObject", manualPointsObject);
+    }
+    
+    
+    </script>
 </body>
 </html>
