--- a/website/templates/result.html
+++ b/website/templates/result.html
@@ -44,7 +44,7 @@
         Download results as CSV
     </button>
     <p>Full cost: {{ content.full_cost }}</p>
-    <img src="{{ content.image_url }}" class="rounded float-start">
+    <img src="/data/images/{{content.name}}.png" class="rounded float-start" alt="Result Plot">
     </div>
 </div>
 
