--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -153,7 +153,7 @@
               'requestType': 'sendPoints',
               'type': 'CSV',
               'pointsLen': csvObject.pointsLen,
-              'csvObject': csvObject,
+              'returnObject': csvObject,
             })})
             .then(function(response) {
               response.json().then(function(response) {
@@ -190,7 +190,7 @@
               'requestType': 'sendPoints',
               'type': 'manual',
               'pointsLen': manualPointsNum,
-              'manualObject': manualPointsObject,
+              'returnObject': manualPointsObject,
             })
           }).then(function (response){
             if(response.ok) {
@@ -262,7 +262,7 @@
         alert("Wrong CSV file format. Check capacity of vehicles");
         return false;
       }
-      for(let i = 1; i < data.length-1; i++) {
+      for(let i = 1; i < data.length; i++) {
         let row = data[i].split(";");
         console.log(row);
         if (row.length != 6) {
@@ -284,7 +284,7 @@
       data = data.split("\n");
       let firstRow = data[0].split(";");
       let capacity = Number(firstRow[1]);
-      for(let i = 1; i < data.length-1; i++) {
+      for(let i = 1; i < data.length; i++) {
         let row = data[i].split(";");
         var point = Object();
         point.x = Number(row[1]);
