--- a/website/templates/display.html
+++ b/website/templates/display.html
@@ -56,7 +56,7 @@
                   <tr>
                       <td>{{ value.name }}</th>
                       <td>{{ value.date }}</td>
-                      <td>{{ value.number_of_points }}</td>
+                      <td>{{ value.num_of_points }}</td>
                       <td>{{ value.input_type }}</td>
                   </tr>
               {% endfor %}
